8261759: ZGC: ZWorker Threads Continue Marking After System.exit() called